tests/unit-fail-compilation/j036a.c.ref
j036a.c:3:8: error: Signed integer overflow.
  Undefined behavior (UB-CEMX3). See C11 sec. 6.5:5, J.2:1 item 36
Translation failed (config dumped). Run kcc -d j036a.c to see commands run.
